scroll cart summary and equipment detail need assistance added

--- a/src/app/equipment-detail/equipment-detail.html
+++ b/src/app/equipment-detail/equipment-detail.html
@@ -137,7 +137,23 @@
               </div>
               <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 req_dash_botam push_up"></div>
             </div>
-            <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 product_pics">
+            <!-- <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 product_pics">
+
+            </div> -->
+            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 need_main equipment-detail-need">
+              <!-- START  Need Assistance -->
+              <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 need_part">
+                <h2 class="need_title heading-text">Need Assistance?</h2>
+                <p class="need_sub desc-text">
+                  We would be more than happy to help you.
+                  Our team advisors are 24/7 at your service to
+                  help you.
+                </p>
+                <p class="help_clr desc-text"><a href="#">help@nobleiron.com</a></p>
+                <p class="skype_tex desc-text"><i class="fa fa-phone"></i>
+                  1-800-123-HELLO</p>
+              </div>
+              <!-- End  Need Assistance -->
 
             </div>
           </div>
