quantity summary spacing

--- a/src/app/styles/main.css
+++ b/src/app/styles/main.css
@@ -2399,6 +2399,7 @@ button:hover {
 
 .cart-summary-col .qty-summary {
 	margin-top: 2px;
+	margin-right: 10px;
 }
 
 .cart-summary-col .equipment-name {
