Cart page changes

--- a/src/app/cart/cart-payment.html
+++ b/src/app/cart/cart-payment.html
@@ -4,7 +4,7 @@
       <div class="pickup-delivery payment-option pay-now" ng-class="{'active-pickup-delivery': cartData.payment.paynow == 'true'}">
         <input type="radio" name="get-option" ng-model="cartData.payment.paynow" value="true">
         <span class="go-back-text bold-font">Pay Now</span>
-        <p class="desc-text pickup-desc">Your Credit Card will be charged for the amount mentioned in cart summary. Any differences can be settled at last{}</p>
+        <p class="desc-text pickup-desc">Your Credit Card will be charged for the amount mentioned in cart summary. Any differences can be settled at last</p>
       </div>
     </div>
     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 nopadding-small">
