--- a/src/app/cart/cart-details.html
+++ b/src/app/cart/cart-details.html
@@ -16,7 +16,7 @@
       <tbody>
       <tr ng-repeat="product in cart.Product">
         <td class="vertically-middle cart-image-td">
-          <img ng-src="{{product.Product_image}}" style="width: 100px;height:100px;"/>
+          <img ng-src="{{product.Product_image}}" err-src style="width: 100px;height:100px;"/>
         </td>
         <td class="equipment-desc">
           <h3>{{product.Product_name}}</h3>
