--- a/src/app/cart/cart-snapshot.html
+++ b/src/app/cart/cart-snapshot.html
@@ -8,13 +8,13 @@
         <img ng-src="{{product.Product_image}}"/>
         <p class="bold-font go-back-text equipment-name color-blue">{{product.Product_name}}</p>
         <!-- <input type="checkbox" class="allow-checkbox" ng-model="cartData.productsQuantity[product.Product_id].allowSubstitution" onclick="return false;"><span class="desc-text allow">Allow Substitution</span> -->
-        <span class="desc-text allow">{{cartData.productsQuantity[product.Product_id].allowSubstitution ? 'Allow Substitution' : 'No Substitution Permitted' }}</span>
-        <span class="desc-text pull-right qty-summary">Qty: {{cartData.productsQuantity[product.Product_id].qty}}</span>
+        <span class="desc-text allow">{{cartData.summary.productsQuantity[product.Product_id].allowSubstitution ? 'Allow Substitution' : 'No Substitution Permitted' }}</span>
+        <span class="desc-text pull-right qty-summary">Qty: {{cartData.summary.productsQuantity[product.Product_id].qty}}</span>
         <p class="desc-text bold-font total">
           ${{product.Total_rate}}
-          <a ng-click="deleteProductFromCart(product.Product_id,cartData.productsQuantity[product.Product_id])">
-            <i class="pull-right color-blue qty-summary heading-text" ng-class="{'fa fa-trash': !cartData.productsQuantity[product.Product_id].deleteInProgress,'fa fa-spinner fa-spin': cartData.productsQuantity[product.Product_id].deleteInProgress}" ></i>
-          </a>
+          <!--<a ng-click="deleteProductFromCart(product.Product_id,cartData.summary.productsQuantity[product.Product_id])">-->
+            <!--<i class="pull-right color-blue qty-summary heading-text" ng-class="{'fa fa-trash': !cartData.summary.productsQuantity[product.Product_id].deleteInProgress,'fa fa-spinner fa-spin': cartData.summary.productsQuantity[product.Product_id].deleteInProgress}" ></i>-->
+          <!--</a>-->
         </p>
       </li>
     </ul>
