--- a/src/app/header/header.html
+++ b/src/app/header/header.html
@@ -44,7 +44,7 @@
               </a>
             </li>
             <li>
-              <a ui-sref="hm.cart.detail" class="marker">
+              <a ui-sref="hm.cart.details" class="marker">
                 <i class="fa fa-shopping-cart fa-2x marker"></i>
                 <span class="cart_noti" ng-if="cartCount">{{cartCount}}</span>
               </a>
@@ -69,7 +69,7 @@
         <div ng-if="!userObj" class="not-user-div cart_menu">
           <a href="#/login" class="help-link">Login</a>
           <a href="#/register" class="help-link">Register</a>
-          <a href="#/shopping-cart/details" class="marker">
+          <a ui-sref="hm.cart.details" class="marker">
           <i class="fa fa-shopping-cart fa-2x marker"></i></a>
           <span class="cart_noti" ng-if="cartCount">{{cartCount}}</span>
         </div>
@@ -114,7 +114,7 @@
         <div class="cart_menu" ng-if="userObj">
           <ul>
             <li>
-              <a href="/#/dashboard" class="marker">
+              <a ui-sref="hm.dashboard.main" class="marker">
                 <i class="fa fa-tachometer fa-2x marker"></i>
               </a>
             </li>
@@ -148,7 +148,7 @@
         <div ng-if="!userObj" class="not-user-div cart_menu">
           <a href="#/login" class="help-link">Login</a>
           <a href="#/register" class="help-link">Register</a>
-          <a href="#/shopping-cart" class="marker">
+          <a ui-sref="hm.cart.details" class="marker">
           <i class="fa fa-shopping-cart fa-2x marker"></i></a>
           <span class="cart_noti" ng-if="cartCount">{{cartCount}}</span>
         </div>
