--- a/src/app/cart/cart-update-jobsite.html
+++ b/src/app/cart/cart-update-jobsite.html
@@ -4,16 +4,16 @@
   <div class="col-lg-9 col-md-8 col-sm-12 col-xs-12 lr-padding">
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 leftpadding delivery-leftpadding-small">
       <ul class="nav nav-tabs gride-tab root-category">
-        <li ng-class="{'active': !addNew}">
-          <a tabtoggle data-toggle="tab" href="#existing-job" ng-click="addNew = false">Existing Job Sites</a>
+        <li ng-class="{'active': !tabs.addNew}">
+          <a  ng-click="tabs.addNew = false">Existing Job Sites</a>
         </li>
-        <li ng-class="{'active': addNew}">
-          <a tabtoggle data-toggle="tab" href="#add-new-job" ng-click="hackMapLoad()">Add New</a>
+        <li ng-class="{'active': tabs.addNew}">
+          <a ng-click="tabs.addNew = true;hackMapLoad()">Add New</a>
         </li>
       </ul>
     </div>
     <!-- update existing job -->
-    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 update-exist tab-pane fade in active leftpadding delivery-leftpadding-small" id="existing-job">
+    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 update-exist tab-pane fade in active leftpadding delivery-leftpadding-small" ng-show="!tabs.addNew">
 
       <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 job-site-list update-job lr-padding lr-padding-small" ng-if="!cartData.jobsites.length">
         <p class="desc-text"><i class="fa fa-exclamation-circle"></i> &nbsp No Jobsites Available</p>
@@ -26,7 +26,7 @@
           <i class="fa fa-search pull-right icon-right"></i>
         </div>
         <div class="job-lists inner-scroll">
-          <div ng-repeat="site in cartData.jobsites | filter:searchJosite">
+          <div ng-repeat="site in cartData.jobsites | orderBy:'-selected' | filter:searchJosite">
             <input type="radio" name="Site Name" ng-click="selectJobsite(site)" ng-checked="site.SiteID == cartData.delivery.selectedJobSite.SiteID">
             <span>{{site.Site_Name}}</span>
           </div>
@@ -84,7 +84,7 @@
     </div>
 
     <!-- add new job -->
-    <div id="add-new-job" class="col-lg-12 col-md-12 col-sm-12 col-xs-12 tab-pane fade update-exist">
+    <div ng-show="tabs.addNew" class="col-lg-12 col-md-12 col-sm-12 col-xs-12 tab-pane">
       <div class="row fields-row">
         <form valdr-type="JobSite">
           <div class="col-md-12 site-col lr-padding">
