--- a/src/app/cart/cart-duration.html
+++ b/src/app/cart/cart-duration.html
@@ -78,11 +78,11 @@
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot devider devider-bottom"></div>
   <div class="row nomargin review-btn-row">
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-right">
-      <button class="btn all-btn sell-equ btn-right-margin" ui-sref="hm.cart.updateAddress">
+      <button class="btn all-btn sell-equ btn-right-margin"  ui-sref="hm.cart.updateAddress">
         <i class="fa fa fa-chevron-left"></i>&nbsp
         Back
       </button>
-      <button class="btn all-btn sign_mybtn primary-btn autowidth" ui-sref="hm.cart.review">
+      <button class="btn all-btn sign_mybtn primary-btn autowidth" ng-disabled="!cartData.steps.duration.complete" ui-sref="hm.cart.review">
         Next
         &nbsp<i class="fa fa fa-chevron-right"></i>
       </button>
