--- a/src/app/cart/cart-review.html
+++ b/src/app/cart/cart-review.html
@@ -76,6 +76,7 @@
 		<!-- jobsite details -->
 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding jobsite-details-col">
 			<h3 class="bold-font heading-text">Jobsite Details</h3>
+
 			<i class="fa fa-map-marker color-blue heading-text"></i>
       <span>{{cartData.delivery.selectedJobSite.Site_Name}}</span>
       <br>
@@ -91,9 +92,12 @@
   		<!--</span>-->
 		</div>
 		<!-- devider -->
+    <div ng-show="jobsiteContactInfoEmpty(cartData.delivery.ContactInfo)">
+
+
 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot devider"></div>
 		<!-- contact information -->
-		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding jobsite-details-col">
+		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding jobsite-details-col" >
 			<h3 class="bold-font heading-text">Contact Information</h3>
 			<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 nopadding person-details">
 				<i class="fa fa-user color-blue heading-text"></i>
@@ -114,6 +118,7 @@
 	  		</span>
 			</div>
 		</div>
+    </div>
 		<!-- devider -->
 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 devider bord_dash_bot"></div>
 		<!-- request date -->
