--- a/src/app/cart/cart-snapshot.html
+++ b/src/app/cart/cart-snapshot.html
@@ -4,7 +4,7 @@
   </div>
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 inner-scroll cart-snap-col inner-scroll">
     <ul>
-      <li ng-repeat="product in cart.Product">
+      <li ng-repeat="product in data.cart.Product">
         <img ng-src="{{product.Product_image}}" err-src/>
         <p class="bold-font go-back-text equipment-name color-blue">{{product.Product_name}}</p>
         <!-- <input type="checkbox" class="allow-checkbox" ng-model="cartData.productsQuantity[product.Product_id].allowSubstitution" onclick="return false;"><span class="desc-text allow">Allow Substitution</span> -->
@@ -21,16 +21,16 @@
     <div>
       <h3 class="desc-text topmargin">
         <span>Sub-Total Rental:</span>
-        <span class="pull-right">${{cart.Sub_total}}</span>
+        <span class="pull-right">${{data.cart.Sub_total}}</span>
       </h3>
-      <h3 class="desc-text topmargin" ng-repeat="(key, value) in cart.Charges">
+      <h3 class="desc-text topmargin" ng-repeat="(key, value) in data.cart.Charges">
         <span>{{key}}:</span>
         <span class="pull-right">${{value}}</span>
       </h3>
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot nopadding"></div>
       <h3 class="desc-text bold-font">
         <label>Total:</label>
-        <span class="pull-right">${{cart.Grand_total}}</span>
+        <span class="pull-right">${{data.cart.Grand_total}}</span>
       </h3>
     </div>
   </div>
