--- a/src/app/cart/cart-review.html
+++ b/src/app/cart/cart-review.html
@@ -138,7 +138,7 @@
 		<!-- duration text -->
 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding">
 			<p class="desc-text approx-text">
-				Approximately renting for{{cartData.duration.span}} (If returned by 3PM, wednesday)
+				Approximately renting for{{cartData.duration.span}} (If returned by <span >{{cartData.duration.toDt | amDateFormat:'HH:mmA, dddd'}}</span>))
 			</p>
 		</div>
 		<div class="col-xs-12 bord_dash_bot visible-xs"></div>
