--- a/src/app/landing/landing.html
+++ b/src/app/landing/landing.html
@@ -347,13 +347,14 @@
       <div class="search_main">
         <form class="navbar-form nomargin" role="search">
 
+          <i class="fa fa-spinner fa-spin loading-search" ng-hide="!isLoading"></i>
           <input type="text" class="form-control search-head" autocomplete="off" placeholder="Search lifts, boom lifts, forklifts etc" id="query" name="query" ng-model="selectedProduct"
                  typeahead="item as item.Product_Name for item in getProducts($viewValue)"
                  typeahead-template-url="typeahead-item.html" typeahead-min-length="3" typeahead-wait-ms="500" typeahead-on-select="selectSearchedItem($item, $model, $label)"
-                 typeahead-loading="isLoading">
+                 typeahead-loading="isLoading" ng-class="{'loading-time': isLoading}">
 
-          <button class="btn btn-default my_search" type="submit" ng-click="selectSearchedItem()"><i class="glyphicon glyphicon-arrow-right" ng-show="!isLoading"></i>
-            <i class="fa fa-spinner fa-spin" ng-hide="!isLoading"></i>
+          <button class="btn btn-default my_search" type="submit" ng-click="selectSearchedItem()"><i class="glyphicon glyphicon-arrow-right"></i>
+            <!-- <i class="fa fa-spinner fa-spin" ng-hide="!isLoading"></i> -->
           </button>
 
         </form>
