--- a/src/app/cart/cart-payment.html
+++ b/src/app/cart/cart-payment.html
@@ -49,8 +49,8 @@
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot devider"></div>
   <div class="row nomargin">
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 reserve-generate-btn">
-      <button class="btn sign_mybtn all-btn primary-btn autowidth skip-btn">Skip and Generate Quote</button>
-      <button class="btn sign_mybtn all-btn primary-btn autowidth skip-btn" ui-sref="hm.reserveEquipmentSuccess()">
+      <button class="btn sign_mybtn all-btn primary-btn autowidth skip-btn" ng-click="generateQuote()">Skip and Generate Quote</button>
+      <button class="btn sign_mybtn all-btn primary-btn autowidth skip-btn" ng-click="reserve()">
         <i class="fa fa-check"></i>&nbsp
         Confirm Reservation</button>
     </div>
