--- a/src/app/header/header.html
+++ b/src/app/header/header.html
@@ -10,26 +10,17 @@
     <!-- END  logo -->
     <!-- START  Search box -->
 
-    <!-- <button type="button" class="for-small" ng-click="toggleHeader()">
-      <span class="sr-only">Toggle navigation</span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-    </button> -->
-    <!-- <div class="hide-header-navbar" ng-class="{'show-header-navbar': showHeader}"> -->
-    <div class="col-lg-4 col-md-4 col-sm-10 col-xs-8 my_alc nopadding hidden-lg hidden-md header-prof-part">
+
+    <!-- mobile-header -->
+    <!-- <div class="col-lg-4 col-md-4 col-sm-10 col-xs-12 my_alc nopadding hidden-lg hidden-md header-prof-part">
         <div class="btn-group drop-btn profile-dropdown user-div" dropdown ng-if="userObj">
           <button class="btn btn-mini my-alc-btn nopadding prof-btn" id="single-button" dropdown-toggle><img class="pro_pic" src="/assets/images/pro_pic.png">{{userObj.logged_userName}}
-          <!-- <button class="btn btn-mini dropdown-toggle my-alc-btn-toggle prof-btn">
-            <span class="caret"></span>
-          </button> -->
-          <i class="fa fa-caret-down color-blue heading-text"></i>
+            <i class="fa fa-caret-down color-blue heading-text"></i>
           </button>
           <ul class="dropdown-menu list-group user-list-group arrow_box"  role="menu" aria-labelledby="single-button">
             <li role="presentation"class="list-group-item noborder"><a class="nopadding" role="menuitem" tabindex="-1" href="/#/dashboard">Dashboard</a></li>
             <li role="presentation"class="list-group-item noborder"><a class="nopadding" role="menuitem" tabindex="-1" href="#/orders/history">Recent Orders</a></li>
             <li role="presentation"class="list-group-item noborder"><a class="nopadding" role="menuitem" tabindex="-1" href="#">Purchases</a></li>
-            <!-- <li role="presentation"class="list-group-item noborder"><a class="nopadding" role="menuitem" ui-sref="hm.userProfile" tabindex="-1" href="/#/profile">My Profile</a></li> -->
             <li role="presentation" class="list-group-item"><a class="nopadding" role="menuitem" tabindex="-1" href="/#/user/profile">Profile Settings</a></li>
             <li role="presentation" class="list-group-item"><a class="nopadding" role="menuitem" tabindex="-1" href="/#/help">Help</a></li>
             <li role="presentation" class="list-group-item bottomborder"><a class="nopadding" role="menuitem" tabindex="-1" href="/#/logout">Logout</a></li>
@@ -51,21 +42,6 @@
             </li>
           </ul>
         </div>
-        <!-- <div class="btn-group drop-btn user-div" ng-if="userObj">
-          <div>
-            <div class="btn-group" uib-dropdown is-open="status.isopen">
-            <button id="single-button" type="button" class="btn btn-mini my-alc-btn nopadding prof-btn" uib-dropdown-toggle ng-disabled="disabled">
-            <img class="pro_pic" src="/assets/images/pro_pic.png">{{userObj.logged_userName}}
-            <span class="caret"></span>
-            </button>
-            <ul class="uib-dropdown-menu sort-by-dropdown" role="menu" aria-labelledby="single-button">
-            <li role="menuitem"><a ui-sref="hm.userProfile" tabindex="-1" href="/#/profile">Profile</a></li>
-            <li role="menuitem"><a tabindex="-1" href="/#/portal-access" ng-if="!userObj.portal_login">Get Portal Access</a></li>
-            <li role="menuitem"><a tabindex="-1" href="/#/logout">Logout</a></li>
-            </ul>
-            </div>
-          </div>
-        </div> -->
         <div ng-if="!userObj" class="not-user-div cart_menu">
           <a href="#/login" class="help-link">Login</a>
           <a href="#/register" class="help-link">Register</a>
@@ -73,8 +49,12 @@
           <i class="fa fa-shopping-cart fa-2x marker"></i></a>
           <span class="cart_noti" ng-if="cartCount">{{cartCount}}</span>
         </div>
-    </div>
-      <div class="col-lg-7 col-md-7 col-sm-12 col-xs-12 nopadding">
+    </div> -->
+
+
+
+
+    <div class="col-lg-7 col-md-7 col-sm-10 col-xs-8 nopadding">
 
         <form class="navbar-form my-search-nav header-form-small" role="search">
 
@@ -83,8 +63,8 @@
                  typeahead-on-select="selectSearchedItem($item, $model, $label)"
                  typeahead-template-url="typeahead-item.html">
 
-          <button class="btn btn-default my_search my-search-header" type="submit" ng-click="selectSearchedItem()"><i class="glyphicon glyphicon-arrow-right"></i></button>
-          <div class="dont-see-div">
+          <button class="btn btn-default my_search my-search-header hidden-xs hidden-sm" type="submit" ng-click="selectSearchedItem()"><i class="glyphicon glyphicon-arrow-right"></i></button>
+          <div class="dont-see-div hidden-xs hidden-sm">
             <a href="/#/help" class="help-link">Don't see what you need?</a>
             <div class="btn-group drop-btn profile-dropdown user-div visible-xs visible-sm" dropdown>
               <a class="help-link nomargin nopadding" href="#/FAQ">About
@@ -92,10 +72,15 @@
           </div>
           </div>
         </form>
-      </div>
-      <!-- END  Search box -->
-      <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 my_alc hide-header-navbar nopadding header-prof-part visible-md visible-lg">
+    </div>
 
+
+    <!-- END  Search box -->
+
+
+
+    <!-- web-header -->
+    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 my_alc nopadding header-prof-part header-xs">
         <div class="btn-group drop-btn profile-dropdown user-div" dropdown ng-if="userObj">
           <button class="btn btn-mini my-alc-btn nopadding prof-btn" id="single-button" dropdown-toggle><img class="pro_pic" src="/assets/images/pro_pic.png">{{userObj.logged_userName}}
             <i class="fa fa-caret-down color-blue heading-text"></i>
@@ -152,8 +137,7 @@
           <i class="fa fa-shopping-cart fa-2x marker"></i></a>
           <span class="cart_noti" ng-if="cartCount">{{cartCount}}</span>
         </div>
-      </div>
-    <!-- </div> -->
+    </div>
   </div>
 </header>
 <!-- End header -->
