--- a/src/app/styles/media.css
+++ b/src/app/styles/media.css
@@ -188,7 +188,7 @@
   }
 
   .total-price div span {
-    float: right;
+    /*float: right;*/
     font-size: 14px;
   }
 
@@ -368,7 +368,6 @@
   .delivery-leftpadding-small {
     padding-left: 15px !important;
   }
-
 }
 
 @media screen and (max-width: 600px) {
@@ -674,10 +673,12 @@
 
   .my-search-nav {
     padding: 0;
+    margin-top: 10px;
   }
 
   .my-search-nav .search-head-without {
-    width: 85% !important;
+    width: 100% !important;
+    margin-top: 10px;
   }
 
   .my_search {
@@ -764,12 +765,13 @@
 
   .cart-for-mobile .cart-image-div img {
     width: 100%;
+    max-width: 300px;
   }
 
   .cart-col .cart-image-div {
     min-height: 200px;
     text-align: center;
-    background: #ddd;
+    /*background: #ddd;*/
   }
 
   .cart-col .equipment-desc {
@@ -918,6 +920,49 @@
   }
   .addjob-left-padding {
     padding-left: 0 !important
+  }
+
+  .header-xs {
+    margin-top: 0;
+    text-align: center;
+  }
+
+  .header-xs .profile-dropdown {
+    float: none;
+    padding-top: 5px;
+    padding-bottom: 5px;
+  }
+
+  .header-xs .profile-dropdown .my-alc-btn {
+    margin: 0;
+  }
+
+  .header-xs .cart_menu {
+    float: none;
+    margin-left: 15px;
+  }
+
+  .header-xs .cart_menu ul li a {
+    line-height: 20px;
+  }
+
+  .header-xs .cart_menu .cart_noti {
+    vertical-align: super;
+  }
+
+  .header-xs .drop-btn {
+    float: none;
+  }
+
+  .header-xs .about-caret {
+    margin: 0;
+    padding-top: 4px;
+    padding-left: 15px;
+  }
+
+  .header-img-small {
+    width: 60px;
+    margin-top: 10px;
   }
 
 }
