--- a/src/app/prelogin-header/prelogin-header.html
+++ b/src/app/prelogin-header/prelogin-header.html
@@ -5,7 +5,7 @@
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed landing-header prelogin-header-btn topmargin" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="true">
-            <i class="fa fa-search marker"></i>
+            <i class="fa fa-search color-blue"></i>
           </button>
           <a href="/#/" class="navbar-brand toppadding">  <img src="assets/images/logo.png" alt="" class="header-img-small"></a>
         </div>
