--- a/src/app/cart/cart-review.html
+++ b/src/app/cart/cart-review.html
@@ -81,8 +81,8 @@
       <span>{{cartData.delivery.selectedJobSite.Site_Name}}</span>
       <br>
       <p class="address2">{{cartData.delivery.selectedJobSite.Address1}}</p>
-      <p>{{cartData.delivery.selectedJobSite.Address2}}</p>
-      <p>{{cartData.delivery.selectedJobSite.City}}&nbsp;{{cartData.delivery.selectedJobSite.Prov}}</p>
+      <p class="address2">{{cartData.delivery.selectedJobSite.Address2}}</p>
+      <p class="address2">{{cartData.delivery.selectedJobSite.City}}&nbsp;{{cartData.delivery.selectedJobSite.Prov}}</p>
       <p class="zip">Zip Code: {{cartData.delivery.selectedJobSite.Postal}}</p>
       <i class="fa fa-phone-square color-blue heading-text"></i>
       <span class="number">{{cartData.delivery.selectedJobSite.Phone}}</span>
